<!--
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Lara Martín as part of the Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be your own work, hence
  ~ submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and the suspension of your account.
  ~
  ~ Me, the author of the project, allow you to check the code as a reference, but if
  ~ you submit it, it's your own responsibility if you get expelled.
  ~
  ~ Copyright (c) 2017 Lara Martín
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="sale_button">Sale</string>
    <string name="new_product">Add new item</string>
    <string name="hint_email_address">supplier@gmail.com</string>
    <string name="supplier_email_title">Supplier E-mail Address</string>
    <string name="supplier_phone_hint">e.g. +49 000-000-000</string>
    <string name="supplier_phone_title">Supplier Phone</string>
    <string name="supplier_name_hint">Candy Supplier GmbH</string>
    <string name="supplier_name_title">Supplier Name</string>
    <string name="quantity_title">Quantity</string>
    <string name="price_title">Price</string>
    <string name="product_name_title">Product Name</string>
    <string name="currency_details">¥ / item</string>
    <string name="action_save">Save item</string>
    <string name="editor_activity_title_new_item">Add new item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="menu_order_item">Order more</string>
    <string name="menu_delete_item">Delete item</string>
    <string name="menu_delete_all_data">Delete all data</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="order_message">You can place an order for this item by phone or e-mail</string>
    <string name="delete_message">Are you sure you want to procede with the deletion?</string>
    <string name="delete">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list_hint">Start adding some items to your inventory</string>
    <string name="action_add_dummy_data">Add Dummy Data</string>
    <string name="select_image">Select image</string>
    <string name="image">Image</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes in the product information. Do you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
</resources>
